From version 0.3.1 to 0.3.2
- use of new "user context" objects, allows account lookup to be dynamic
  and externalized.
- minor fix for init script.
- use of GROUP to set effective server group id.

From version 0.3.0 to 0.3.1
- expansion of rtpproxy runtime api for expanding assignment and counting
  (might be used to add additional rtp proxy sockets in a re-invite when 
  video is added, for example...)
- fix registration clearing & reuse when map becomes "offline"...
- correct integration with offline/online registry status & clearing

From version 0.2.7 to 0.3.0
- variant build of zeroconf plugin based on support.
- new rtpproxy engine code in api and server.
- elimination of unused fifo subscribe/publish mechanisms...
- introduction of generic rtp proxying as plugin module
- introduction of subscriber module for "voip provider" premise gateways

From version 0.2.6 to 0.2.7
- basic re-invite processing added.
- transaction completion on relay of far end response.

From version 0.2.5 to 0.2.6
- change of linkage handling of server.

From version 0.2.4 to 0.2.5
- fix for proper handling of log files and cgi extraction of call log with
  timestamp key.  Together these changes allow cgi polling of call details.

From version 0.2.3 to 0.2.4
- small fixups on path usage in make and spec files.
- fix in config file path scanning.

From version 0.2.2 to 0.2.3
- default autoloading of available plugins.
- spec split to externalize plugins.
- simplified library abi numbering.

From version 0.2.1 to 0.2.2
- introduction of cgi control interface.
- server "state" support and use of state.xml config to set state properties.
- spec file for building RPM.
- build support for normal daemon operation.

From version 0.2.0 to 0.2.1
- integrated debug/memleak detection, used to start gdb or valgrind for
  ".libs/lt-sipw" when started with libtool "wrapper" scripts in build area.
- fix for avahi detection in configure

From version 0.1.2 to 0.2.0