@@ -10,10 +10,10 @@
 
 AC_INIT(autogen.sh)
 
-VERSION="0.3.1"
-LT_VERSION="0:5:0"
+VERSION="0.3.2"
+LT_VERSION="0:6:0"
 
-UCOMMON_REQUIRES="1.9.7"
+UCOMMON_REQUIRES="1.9.8"
 
 AC_CONFIG_AUX_DIR(autoconf)
 AC_CANONICAL_SYSTEM
