@@ -26,7 +26,7 @@ URL: http://www.gnu.org/software/sipwitch
 Group: Networking/Telephony
 Source0: http://www.gnutelephony.org/dist/tarballs/sipwitch-%{version}.tar.gz
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root
-BuildRequires: ucommon-devel >= 1.9.5
+BuildRequires: ucommon-devel >= 1.9.8
 BuildRequires: libeXosip2-devel >= 3.0.0
 BuildRequires: gcc-c++ pkgconfig
 %if %uses_openssl
